---------------------------------------------------------------------------
CHANGELOG: curn (Customizable Utilitarian RSS Notifier)

$Id$

Copyright (c) 2004-2006 Brian M. Clapper. All rights reserved.
---------------------------------------------------------------------------

Version 3.0.1 (...)

- Graphical installer now renders the license in a more readable,
  proportional font.


Version 3.0 (5 July, 2006)

			       ------------
			       Enhancements
			       ------------

- Added plug-in capability. Upon startup, curn will look for plug-ins
  in ${curn.home}/plugins, ${user.home}/curn/plugins and
  ${user.home}/.curn/plugins. (${user.home} is the Java System "user.home"
  property. ${curn.home} is the "curn" installation directory.)

  See the Users' Guide for details on writing and deploying plug-ins.

  NOTES: 

  1. For this capability to work properly, you must invoke curn via the
     supplied curn.sh shell script (Unix) or curn.bat (Windows) script.
     Those files handle setting ${curn.home} and running curn via a new
     Bootstrap class that finds all the plug-in jar files and installs an
     alternate class loader that will load classes from them.

  2. Custom OutputHandler classes should now be placed in ${curn.home}/lib,
     ${user.home}/curn/lib or ${user.home}/.curn/lib, so that curn can find
     them. Simply adding them to the CLASSPATH won't work any more.

- Converted some base curn functionality into (built-in) plug-ins.

- Path names in the curn configuration file can now be expressed with
  Unix-style file separators ("/" characters), regardless of the operating
  system where curn is being run. At runtime, curn will convert them to the
  appropriate file separator (e.g., "\" on Windows). This enhancement
  provides two benefits:

  1. It enhances the portability of curn configuration files.
  2. It provides a means to avoid using (and, therefore, having to escape)
     backslash characters in the configuration file.
